name:                heapd
version:             0.1.0.0

synopsis:            Heap as a Service
description:         Heap datastructure as a RESTful web service.

homepage:            https://github.com/alunduil/heapd

license:             MIT
license-file:        LICENSE

author:              Alex Brandt
maintainer:          alunduil@alunduil.com

copyright:           2016 heapd developers

category:            Web

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable heapd
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
